# filtro_sobel

./: .gitignore  CMakeLists.txt  README.md  build.ps1  build.sh
android/: sobel_jni.cpp
docker/: .dockerignore  Dockerfile.fast  docker-compose.fast.yml
docs/: ANDROID_NDK_TUTORIAL.md  README.md  dependencies.txt
include/: edge_detection_strategy.h  filter_factory.h  sobel_filter.h
scripts/: clean-images.ps1  clean-images.sh  compare-performance.ps1  compare-performance.sh  ensure-test-image.ps1  ensure-test-image.sh  run-complete-test.ps1  run-complete-test.sh  test-basic.ps1  test-basic.sh  test-improved.sh  test-omp.ps1  test-omp.sh  test-pthread.ps1  test-pthread.sh  test-strategy-factory.sh
src/: filter_factory.cpp  sobel_filter.cpp  sobel_filter_improved.cpp  sobel_filter_improved_lib.cpp  sobel_filter_omp.cpp  sobel_filter_pthread.cpp  sobel_strategies.cpp  test_strategy_factory.cpp
tests/: test_sobel.cpp  test_sobel_no_gui.cpp  test_sobel_omp.cpp  test_sobel_omp_fixed.cpp
